[gd_scene load_steps=6 format=3 uid="uid://c8gs41n2ctmac"]

[ext_resource type="Script" path="res://Scripts/Peashooter.gd" id="1_1d1x4"]
[ext_resource type="Texture2D" uid="uid://rmuwrwc0w07e" path="res://Art/第1帧.png" id="3_b3efc"]
[ext_resource type="Script" path="res://Scripts/PeashooterProgressBar.gd" id="3_lyvuu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cwf8k"]
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hgw07"]

[node name="Peashooter" type="CharacterBody2D"]
position = Vector2(550, 247)
script = ExtResource("1_1d1x4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-18, -11)
rotation = -3.14159
scale = Vector2(0.371579, -0.371579)
texture = ExtResource("3_b3efc")

[node name="BulletSpawn" type="Marker2D" parent="."]
position = Vector2(-33.16, -19)

[node name="shootSpeedTimer" type="Timer" parent="."]

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-17, -14)
shape = SubResource("CapsuleShape2D_cwf8k")
debug_color = Color(0.929412, 0.160784, 0.533333, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-17, -14)
shape = SubResource("CapsuleShape2D_hgw07")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer" node_paths=PackedStringArray("peashooter")]
offset_left = 149.0
offset_top = 574.0
offset_right = 987.0
offset_bottom = 601.0
script = ExtResource("3_lyvuu")
peashooter = NodePath("../..")

[connection signal="timeout" from="shootSpeedTimer" to="." method="_on_shoot_speed_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
